--- a/frontend/conference/app/globals.css
+++ b/frontend/conference/app/globals.css
@@ -14,6 +14,7 @@
         --primary-foreground: 210 40% 98%;
         --secondary: 210 40% 96.1%;
         --secondary-foreground: 222.2 47.4% 11.2%;
+        --tertiary: 197, 51%, 69%;
         --muted: 210 40% 96.1%;
         --muted-foreground: 215.4 16.3% 46.9%;
         --accent: 210 40% 96.1%;
@@ -24,7 +25,7 @@
         --input: 214.3 31.8% 91.4%;
         --ring: 221.2 83.2% 53.3%;
         --radius: 0.4rem;
-        --chart-1: 12 76% 61%;
+        --chart-1: 197, 51%, 69%;
         --chart-2: 173 58% 39%;
         --chart-3: 197 37% 24%;
         --chart-4: 43 74% 66%;
